--- a/Web_Band/index.html
+++ b/Web_Band/index.html
@@ -150,11 +150,11 @@
                         </p>
                         <p>
                             <i class="fa-solid fa-phone"></i>
-                            Phone: +00 151515
+                            Phone: <a href="tel:+00 151515">+00 151515</a>
                         </p>
                         <p>
                             <i class="fa-solid fa-envelope"></i>
-                            Email: mail@gmail.com 
+                            Email: <a href="mailto:mail@gmail.com ">mail@gmail.com </a>
                         </p>
                     </div>
                     <div class="col col-half s-col-ful contact-form">
@@ -172,7 +172,7 @@
                                     <input type="text" name="" placeholder="Message" required id="" class="form-control">
                                 </div>
                             </div>
-                            <input class="form-submit mt-16 s-full-width" type="submit" value="SEND">
+                            <input class="contact-submit-btn form-submit mt-16 s-full-width" type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
